# advent-of-code-2025

./: LICENSE
day01/: main.py  pyproject.toml
day02/: README.md  main.py  pyproject.toml
day03/: README.md  main.py  pyproject.toml
day04/: README.md  main.py  pyproject.toml
day05/: README.md  main.py  pyproject.toml
day06/: README.md  main.py  pyproject.toml
day07/: README.md  main.py
day08/: README.md  main.py  pyproject.toml
day09/: README.md  main.py  pyproject.toml
day10/: README.md  main.py  pyproject.toml
day11/: README.md  main.py  pyproject.toml
